// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Country Home Screen User navigates Country Home Screen 1`] = `
<div
  className="mainContainer"
>
  <div
    className="formBox"
  >
    <p
      className="headingText"
    >
      Welcome To Country App
    </p>
    <input
      className="textInputField"
      data-testid="textInputTestID"
      onChange={[Function]}
      type="text"
      value=""
    />
    <button
      className="submitButton"
      data-testid="submitButtonTestID"
      onClick={[Function]}
    >
      SUBMIT
    </button>
  </div>
</div>
`;

exports[`Country Home Screen User navigates Country Home Screen 2`] = `
<div
  className="mainContainer"
>
  <div
    className="formBox"
  >
    <p
      className="headingText"
    >
      Welcome To Country App
    </p>
    <input
      className="textInputField"
      data-testid="textInputTestID"
      onChange={[Function]}
      type="text"
      value="ind"
    />
    <button
      className="submitButton"
      data-testid="submitButtonTestID"
      onClick={[Function]}
    >
      SUBMIT
    </button>
  </div>
</div>
`;
